samples/_failures_safe/1761218028_a222d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c458375.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_3c458375.c:158:13: error: expected declaration or statement at end of input
  158 |             case TOKEN_EOF:
      |             ^~~~
./samples/SAFE/__tmp_3c458375.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3c458375.c:158:13: error: expected declaration or statement at end of input
